--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "express-session": "^1.17.3",
     "hbs": "^4.2.0",
     "path": "^0.12.7",
+    "random-id": "^1.0.4",
     "socket.io": "^4.5.3"
   },
   "devDependencies": {
